--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/basic.css
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/basic.css
@@ -149,55 +149,57 @@ legend { width: inherit; padding: 0 10px; border-bottom: none;
 /* line 13, ../../scss/system/widget.scss */
 .widget_search .button_open { cursor: pointer; position: absolute; right: 0; -webkit-transition: all 0.4s ease-out; -moz-transition: all 0.4s ease-out; -o-transition: all 0.4s ease-out; transition: all 0.4s ease-out; }
 /* line 24, ../../scss/system/widget.scss */
-.widget_search input { display: none; border: none; border-bottom: 1px solid #ffffff; font-size: 16px; background: none; color: #ffffff; position: relative; right: 48px; width: 100%; margin-left: 48px; }
-/* line 36, ../../scss/system/widget.scss */
-.widget_search input:focus { outline: none; }
+.widget_search > div { position: relative; right: 48px; width: 100%; margin-left: 48px; }
+/* line 30, ../../scss/system/widget.scss */
+.widget_search > div input { display: none; border: none; border-bottom: 1px solid #ffffff; font-size: 16px; background: none; color: #ffffff; position: relative; width: 100%; top: 14px; }
 /* line 41, ../../scss/system/widget.scss */
+.widget_search > div input:focus { outline: none; }
+/* line 47, ../../scss/system/widget.scss */
 .widget_search .button_close { display: none; cursor: pointer; position: absolute; right: 0; }
-/* line 48, ../../scss/system/widget.scss */
+/* line 54, ../../scss/system/widget.scss */
 .widget_search .animate { right: 100%; }
 @media (max-width: 599px) { /* line 2, ../../scss/system/widget.scss */
   .widget_search { right: 100px; } }
 
 /* Date picker */
-/* line 58, ../../scss/system/widget.scss */
+/* line 64, ../../scss/system/widget.scss */
 .widget_datePicker_back { display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background-color: #000000; opacity: 0.5; z-index: 20; }
 
-/* line 69, ../../scss/system/widget.scss */
+/* line 75, ../../scss/system/widget.scss */
 .widget_datePicker { display: none; position: fixed; top: 5%; left: 0; right: 0; margin-right: auto; margin-left: auto; padding: 0px; border-radius: 2px; border-top: none; border-bottom: none; width: 310px; background-color: #ffffff; z-index: 21; }
-/* line 85, ../../scss/system/widget.scss */
+/* line 91, ../../scss/system/widget.scss */
 .widget_datePicker .header { position: relative; height: 55px; padding: 20px; border-top-left-radius: 2px; border-top-right-radius: 2px; border-bottom-left-radius: 0px; }
-/* line 93, ../../scss/system/widget.scss */
-.widget_datePicker .header p { margin: 0; opacity: 0.7; cursor: pointer; }
 /* line 99, ../../scss/system/widget.scss */
+.widget_datePicker .header p { margin: 0; opacity: 0.7; cursor: pointer; }
+/* line 105, ../../scss/system/widget.scss */
 .widget_datePicker .header .mdc-fab { position: absolute; top: 10px; right: 10px; }
-/* line 106, ../../scss/system/widget.scss */
+/* line 112, ../../scss/system/widget.scss */
 .widget_datePicker .listYears { display: none; height: 345px; overflow-y: scroll; }
-/* line 111, ../../scss/system/widget.scss */
+/* line 117, ../../scss/system/widget.scss */
 .widget_datePicker .listYears .mdc-list { overflow: hidden; padding: 0; margin: 0; }
-/* line 116, ../../scss/system/widget.scss */
+/* line 122, ../../scss/system/widget.scss */
 .widget_datePicker .listYears .mdc-list ul { padding: 0; margin: 0; }
-/* line 120, ../../scss/system/widget.scss */
+/* line 126, ../../scss/system/widget.scss */
 .widget_datePicker .listYears .mdc-list ul .mdc-list-item { display: block; text-align: center; line-height: 42px; height: 42px; }
-/* line 130, ../../scss/system/widget.scss */
-.widget_datePicker .month { margin: 0; padding: 0; text-align: center; height: 37px; }
 /* line 136, ../../scss/system/widget.scss */
+.widget_datePicker .month { margin: 0; padding: 0; text-align: center; height: 37px; }
+/* line 142, ../../scss/system/widget.scss */
 .widget_datePicker .month div { display: inline-block; }
-/* line 140, ../../scss/system/widget.scss */
+/* line 146, ../../scss/system/widget.scss */
 .widget_datePicker .month .label { width: 180px; }
-/* line 144, ../../scss/system/widget.scss */
+/* line 150, ../../scss/system/widget.scss */
 .widget_datePicker .month .material-icons { position: relative; top: 8px; width: 48px; cursor: pointer; }
-/* line 152, ../../scss/system/widget.scss */
+/* line 158, ../../scss/system/widget.scss */
 .widget_datePicker .week ul { margin: 0; padding: 0; text-align: center; }
-/* line 157, ../../scss/system/widget.scss */
+/* line 163, ../../scss/system/widget.scss */
 .widget_datePicker .week ul li { position: relative; display: inline-block; border-radius: 50%; width: 42px; height: 42px; line-height: 42px; opacity: 0.5; font-size: 12px; }
-/* line 169, ../../scss/system/widget.scss */
+/* line 175, ../../scss/system/widget.scss */
 .widget_datePicker .day ul { margin: 0; padding: 0; text-align: center; }
-/* line 174, ../../scss/system/widget.scss */
+/* line 180, ../../scss/system/widget.scss */
 .widget_datePicker .day ul li { position: relative; display: inline-block; width: 42px; height: 42px; line-height: 42px; font-size: 11px; }
-/* line 182, ../../scss/system/widget.scss */
+/* line 188, ../../scss/system/widget.scss */
 .widget_datePicker .day ul li span { display: inline-block; width: 32px; height: 32px; line-height: 32px; cursor: pointer; border-radius: 50%; }
-/* line 193, ../../scss/system/widget.scss */
+/* line 199, ../../scss/system/widget.scss */
 .widget_datePicker .button { text-align: right; padding: 10px; }
 
 /*$spaceBottom: 120px;
