--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/recover_password.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/recover_password.html.twig
@@ -18,7 +18,7 @@
             
             {{form_widget(form._token)}}
 
-            {{form_widget(form.submit, {'label': "button_4"})}}
+            {{form_widget(form.submit, {'label': "button_4", 'dense': "", 'raised': ""})}}
         </form>
     {% endif %}
 </div>
