--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/loader.scss
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/loader.scss
@@ -1,61 +1,84 @@
 // Version 1.0.0
 
-$offset: 187;
-$duration: 1.4s;
+$green: #008744;
+$blue: #0057e7;
+$red: #d62d20;
+$yellow: #ffa700;
+
+$width: 50px;
 
 .loader {
+    display: none;
     position: fixed;
-    top: 50%;
+    top: 30%;
     left: 50%;
-    margin-top: -50px;
-    margin-left: -50px;
+    margin-top: -25px;
+    margin-left: -25px;
     
-    animation: rotator $duration linear infinite;
+    border: 1px solid #cecece;
+    border-radius: 50%;
+    
+    width: $width;
+  
+    &:before {
+        content: "";
+        display: block;
+        padding-top: 100%;
+    }
+    
+    .circular {
+        height: 100%;
+        transform-origin: center center;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+
+        animation: rotate 2s linear infinite;
+    }
     
     .path {
-        stroke-dasharray: $offset;
+        stroke-dasharray: 1, 200;
         stroke-dashoffset: 0;
-        transform-origin: center;
-        
-        animation: dash $duration ease-in-out infinite, colors ($duration * 4) ease-in-out infinite;
+        stroke-linecap: round;
+
+        animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
     }
 }
 
-@keyframes rotator {
-    0% {
-        transform: rotate(0deg);
-    }
+@keyframes rotate {
     100% {
-        transform: rotate(270deg);
+        transform: rotate(360deg);
     }
 }
 @keyframes dash {
     0% {
-        stroke-dashoffset: $offset;
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
     }
     50% {
-        stroke-dashoffset: $offset/4;
-        transform:rotate(135deg);
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -35px;
     }
     100% {
-        stroke-dashoffset: $offset;
-        transform:rotate(450deg);
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -124px;
     }
 }
-@keyframes colors {
-    0% {
-        stroke: #4285F4;
+@keyframes color {
+    100%, 0% {
+        stroke: $red;
     }
-    25% {
-        stroke: #DE3E35;
+    40% {
+        stroke: $blue;
     }
-    50% {
-        stroke: #F7C223;
+    66% {
+        stroke: $green;
     }
-    75% {
-        stroke: #1B9A59;
-    }
-    100% {
-        stroke: #4285F4;
+    80%, 90% {
+        stroke: $yellow;
     }
 }
