--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/widget.scss
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/widget.scss
@@ -14,27 +14,33 @@
         cursor: pointer;
         position: absolute;
         right: 0;
-        
+
         -webkit-transition: all 0.4s ease-out;
         -moz-transition: all 0.4s ease-out;
         -o-transition: all 0.4s ease-out;
         transition: all 0.4s ease-out;
     }
     
-    input {
-        display: none;
-        border: none;
-        border-bottom: 1px solid #ffffff;
-        font-size: 16px;
-        background: none;
-        color: #ffffff;
+    > div {
         position: relative;
         right: 48px;
         width: 100%;
         margin-left: 48px;
         
-        &:focus {
-            outline: none;
+        input {
+            display: none;
+            border: none;
+            border-bottom: 1px solid #ffffff;
+            font-size: 16px;
+            background: none;
+            color: #ffffff;
+            position: relative;
+            width: 100%;
+            top: 14px;
+
+            &:focus {
+                outline: none;
+            }
         }
     }
     
