--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/module_profile.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/module_profile.html.twig
@@ -40,11 +40,11 @@
         {{form_row(form.label, {'label': "module_profile_5"})}}
 
         <div class="form-group">
-            {{form_label(form.fileName, "module_profile_6")}}
+            {{form_label(form.controllerName, "module_profile_6")}}
             <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-file"></i></span>
-                {{form_errors(form.fileName)}}
-                {{form_widget(form.fileName)}}
+                {{form_errors(form.controllerName)}}
+                {{form_widget(form.controllerName)}}
             </div>
         </div>
 
