--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/loader.css
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/loader.css
@@ -1,11 +1,14 @@
 /* line 10, ../scss/loader.scss */
-.loader { display: none; position: fixed; top: 30%; left: 50%; margin-top: -25px; margin-left: -25px; border: 1px solid #cecece; border-radius: 50%; width: 50px; }
+.loader { display: none; position: fixed; top: 30%; left: 50%; margin-top: -25px; margin-left: -25px; z-index: 101; background-color: #ffffff; border: 1px solid #cecece; border-radius: 50%; width: 50px; }
 /* line 23, ../scss/loader.scss */
 .loader:before { content: ""; display: block; padding-top: 100%; }
 /* line 29, ../scss/loader.scss */
 .loader .circular { height: 100%; transform-origin: center center; width: 100%; position: absolute; top: 0; bottom: 0; left: 0; right: 0; margin: auto; animation: rotate 2s linear infinite; }
 /* line 43, ../scss/loader.scss */
 .loader .path { stroke-dasharray: 1, 200; stroke-dashoffset: 0; stroke-linecap: round; animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite; }
+
+/* line 51, ../scss/loader.scss */
+.loader_back { display: none; position: fixed; width: 100%; left: 0; right: 0; top: 0; bottom: 0; background-color: #000000; opacity: 0.7; filter: alpha(opacity=70); z-index: 100; }
 
 @keyframes rotate { 100% { transform: rotate(360deg); } }
 @keyframes dash { 0% { stroke-dasharray: 1, 200; stroke-dashoffset: 0; }
