--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/loader.scss
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/loader.scss
@@ -14,10 +14,10 @@ $width: 50px;
     left: 50%;
     margin-top: -25px;
     margin-left: -25px;
-    
+    z-index: 101;
+    background-color: #ffffff;
     border: 1px solid #cecece;
     border-radius: 50%;
-    
     width: $width;
   
     &:before {
@@ -47,6 +47,19 @@ $width: 50px;
 
         animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
     }
+}
+.loader_back {
+    display: none;
+    position:fixed;
+    width:100%;
+    left:0;
+    right:0;
+    top:0;
+    bottom:0;
+    background-color: #000000;
+    opacity: 0.7;
+    filter: alpha(opacity=70);
+    z-index: 100;
 }
 
 @keyframes rotate {
